<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.simpblep.MainActivity" >

    <item
        android:id="@+id/action_friends"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_friends"/>
    
    <item
        android:id="@+id/action_add_friends"
        android:orderInCategory="200"
        android:showAsAction="never"
        android:title="@string/friends_add"/>
    
	<item
        android:id="@+id/action_add_message"
        android:orderInCategory="300"
        android:showAsAction="never"
        android:title="@string/action_add_message"/>
	
	<item
        android:id="@+id/action_add_deaddrops"
        android:orderInCategory="400"
        android:showAsAction="never"
        android:title="@string/action_add_deaddrops"/>
	
	<item
        android:id="@+id/action_show_msgs"
        android:orderInCategory="500"
        android:showAsAction="never"
        android:title="@string/action_show_msgs"/>
	
</menu>
